--- a/src/index.css
+++ b/src/index.css
@@ -3,21 +3,27 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: 'SUIT-Variable';
-  src: url('https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.woff2')
-    format('woff2-variations');
-  font-weight: 100 900;
-  font-style: normal;
+    font-family: 'SUIT-Variable';
+    src: url('https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.woff2')
+        format('woff2-variations');
+    font-weight: 100 900;
+    font-style: normal;
 }
 
 @font-face {
-  font-family: 'Pretendard-Variable';
-  src: url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/variable/woff2/PretendardVariable.woff2')
-    format('woff2-variations');
-  font-weight: 100 900;
-  font-style: normal;
+    font-family: 'Pretendard-Variable';
+    src: url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/variable/woff2/PretendardVariable.woff2')
+        format('woff2-variations');
+    font-weight: 100 900;
+    font-style: normal;
 }
 
 body {
-  @apply font-sans;
+    @apply font-sans;
+}
+
+.required-label::after {
+    content: ' *';
+    color: red;
+    margin-left: 0.25rem;
 }
